<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <com.andrehaueisen.fitx.CustomTextView
        android:layout_margin="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/configure_class_duration"/>

    <RadioGroup
        android:id="@+id/class_duration_radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        style="@style/RadioButton">

        <RadioButton
            android:id="@+id/duration_45_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryDark"
            android:buttonTint="@color/colorPrimaryDark"
            android:textSize="16sp"

            android:text="@string/duration_45"/>
        <RadioButton
            android:id="@+id/duration_60_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryDark"
            android:buttonTint="@color/colorPrimaryDark"
            android:textSize="16sp"
            android:text="@string/duration_60"/>
        <RadioButton
            android:id="@+id/duration_75_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryDark"
            android:buttonTint="@color/colorPrimaryDark"
            android:textSize="16sp"
            android:text="@string/duration_75"/>
        <RadioButton
            android:id="@+id/duration_90_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryDark"
            android:buttonTint="@color/colorPrimaryDark"
            android:textSize="16sp"
            android:text="@string/duration_90"/>
        <RadioButton
            android:id="@+id/duration_105_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryDark"
            android:buttonTint="@color/colorPrimaryDark"
            android:textSize="16sp"
            android:text="@string/duration_105"/>
        <RadioButton
            android:id="@+id/duration_120_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryDark"
            android:buttonTint="@color/colorPrimaryDark"
            android:textSize="16sp"
            android:text="@string/duration_120"/>

    </RadioGroup>

    <com.andrehaueisen.fitx.CustomButton
        android:id="@+id/confirm_class_configuration_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:background="@drawable/shape_rectangle_outline"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="OK"/>

</LinearLayout>