<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="25dp">


        <android.support.design.widget.TextInputLayout
            android:id="@+id/name_textInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="36dp"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/is_personal_check_bok"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/display_name"
                android:imeOptions="actionNext"
                android:inputType="textCapCharacters|textPersonName"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/is_personal_check_bok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="26dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:checked="false"
            android:text="@string/i_am_personal"
            app:layout_constraintBottom_toTopOf="@+id/cref_name_textInputLayout"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/cref_name_textInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="26dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:textAlignment="center"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/cref_textInputLayout"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cref_name"
                android:imeOptions="actionNext"
                android:inputType="textCapCharacters|textPersonName"/>
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/where_cref_from_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="26dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/which_state_cref_from"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/state_chooser_wheel"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/cref_textInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:textAlignment="center"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/where_cref_from_text_view"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cref_number"
                android:imeOptions="actionNext"
                android:inputType="number"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:background="@color/transparent"
            android:onClick="saveData"
            android:text="@string/next"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <com.wx.wheelview.widget.WheelView
            android:id="@+id/state_chooser_wheel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:minHeight="250dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/button2"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

    </android.support.constraint.ConstraintLayout>

</android.support.v4.widget.NestedScrollView>
