<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/background_image_view"
        android:layout_width="match_parent"
        android:contentDescription="@string/background_image_cd"
        android:layout_height="210dp"
        android:adjustViewBounds="true"
        android:cropToPadding="true"
        android:minHeight="150dp"/>

    <android.support.constraint.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/head_photo_image_view"
            android:contentDescription="@string/profile_image_cd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="224dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:background="@drawable/head_placeholder"
            android:minHeight="60dp"
            android:minWidth="60dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <TextView
            android:id="@+id/personal_name_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/head_photo_image_view"
            tools:text="Andre Haueisen"/>

        <TextView
            android:id="@+id/class_date_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/place_name_text_view"
            tools:text="10/04/2017"/>

        <TextView
            android:id="@+id/place_name_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/personal_name_text_view"
            tools:text="Primatas Crossfit"/>

        <android.support.v7.widget.AppCompatRatingBar
            android:id="@+id/rate_personal_rating_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="64dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:numStars="5"
            android:rating="0"
            android:stepSize="0.5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/class_date_text_view"/>

        <Button
            android:id="@+id/submit_button"
            style="@style/ColoredButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/submit"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rate_personal_rating_bar"/>


    </android.support.constraint.ConstraintLayout>

</FrameLayout>