<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="com.andrehaueisen.fitx.client.search.GeneralPersonalSearchFragment">

        <fragment
            android:id="@+id/client_place_autocomplete_fragment"
            class="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintHorizontal_bias="0.58"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout="@android:layout/simple_expandable_list_item_1"/>

        <include
            android:id="@+id/include"
            layout="@layout/layout_default_preferences"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/client_place_autocomplete_fragment"/>

        <com.andrehaueisen.fitx.CustomButton
            android:id="@+id/choose_date_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/shape_rectangle_outline"
            android:text="@string/choose_date"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/include"/>

        <com.andrehaueisen.fitx.CustomButton
            android:id="@+id/choose_class_start_time_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintHorizontal_weight="0.5"
            android:background="@drawable/shape_rectangle_outline"
            android:text="@string/choose_start_time"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/choose_date_button"
            app:layout_constraintRight_toLeftOf="@+id/guideline"
            android:layout_marginEnd="4dp"/>

        <com.andrehaueisen.fitx.CustomButton
            android:id="@+id/choose_duration_button"
            android:layout_width="0dp"
            app:layout_constraintHorizontal_weight="0.5"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/shape_rectangle_outline"
            android:text="@string/choose_duration"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/choose_date_button"
            app:layout_constraintLeft_toLeftOf="@+id/guideline"
            android:layout_marginStart="4dp"/>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/activate_search_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="32dp"
            android:src="@drawable/ic_search_dark_24dp"
            android:padding="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/choose_duration_button"/>

        <android.support.constraint.Guideline
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:id="@+id/guideline"
            app:layout_constraintGuide_begin="192dp"
            android:orientation="vertical"
            tools:layout_editor_absoluteY="25dp"
            tools:layout_editor_absoluteX="192dp"/>


    </android.support.constraint.ConstraintLayout>

</android.support.v4.widget.NestedScrollView>